@@ -15,8 +15,8 @@ public class ZeckendorfTest {
     public void testGet1() {
         Zeckendorf z = new Zeckendorf();
         Iterator<Long> fibs = z.get(10).iterator();
-        assertEquals(new Long(8), fibs.next());
-        assertEquals(new Long(2), fibs.next());
+        assertEquals(Long.valueOf(8), fibs.next());
+        assertEquals(Long.valueOf(2), fibs.next());
         assertFalse(fibs.hasNext());
     }
 
@@ -27,9 +27,9 @@ public class ZeckendorfTest {
     public void testGet2() {
         Zeckendorf z = new Zeckendorf();
         Iterator<Long> fibs = z.get(100).iterator();
-        assertEquals(new Long(89), fibs.next());
-        assertEquals(new Long(8), fibs.next());
-        assertEquals(new Long(3), fibs.next());
+        assertEquals(Long.valueOf(89), fibs.next());
+        assertEquals(Long.valueOf(8), fibs.next());
+        assertEquals(Long.valueOf(3), fibs.next());
         assertFalse(fibs.hasNext());
     }
 
@@ -40,8 +40,8 @@ public class ZeckendorfTest {
     public void testGet3() {
         Zeckendorf z = new Zeckendorf();
         Iterator<Long> fibs = z.get(1000).iterator();
-        assertEquals(new Long(987), fibs.next());
-        assertEquals(new Long(13), fibs.next());
+        assertEquals(Long.valueOf(987), fibs.next());
+        assertEquals(Long.valueOf(13), fibs.next());
         assertFalse(fibs.hasNext());
     }
 
@@ -52,12 +52,12 @@ public class ZeckendorfTest {
     public void testGet4() {
         Zeckendorf z = new Zeckendorf();
         Iterator<Long> fibs = z.get(10000).iterator();
-        assertEquals(new Long(6765), fibs.next());
-        assertEquals(new Long(2584), fibs.next());
-        assertEquals(new Long(610), fibs.next());
-        assertEquals(new Long(34), fibs.next());
-        assertEquals(new Long(5), fibs.next());
-        assertEquals(new Long(2), fibs.next());
+        assertEquals(Long.valueOf(6765), fibs.next());
+        assertEquals(Long.valueOf(2584), fibs.next());
+        assertEquals(Long.valueOf(610), fibs.next());
+        assertEquals(Long.valueOf(34), fibs.next());
+        assertEquals(Long.valueOf(5), fibs.next());
+        assertEquals(Long.valueOf(2), fibs.next());
         assertFalse(fibs.hasNext());
     }
 
